fix(navigationButtons): now works on smaller screens and bigger screens

--- a/src/abstract/fullyComponents/wheelOfManyImages/navigationButtons/navigationButtons.module.scss
+++ b/src/abstract/fullyComponents/wheelOfManyImages/navigationButtons/navigationButtons.module.scss
@@ -30,6 +30,7 @@
 
       height: 8vw;
       min-height: 50px;
+      max-height: 150px;
       width: 100%;
       min-width: 50px;
 
